<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">镜界</string>
    <string name="app_display_name">镜界</string>
    <string name="app_subtitle">Lens · 轻量隐私浏览</string>
    <string name="url_hint">搜索或输入网址</string>
    <string name="go">前往</string>
    <string name="back">后退</string>
    <string name="forward">前进</string>
    <string name="refresh">刷新</string>
    <string name="home">主页</string>
    <string name="tabs">标签页</string>
    <string name="drawer_open">打开菜单</string>
    <string name="drawer_close">关闭菜单</string>
    <string name="menu_new_tab">新建标签</string>
    <string name="menu_bookmarks">书签</string>
    <string name="menu_history">历史记录</string>
    <string name="menu_settings">设置</string>
    <string name="menu_clean">清除数据</string>
    <string name="menu_about">关于</string>
    <string name="desktop_mode">桌面模式</string>
    <string name="clean_data">清除浏览数据</string>
    <string name="settings_title">设置</string>
    <string name="settings_profile">伪装身份配置</string>
    <string name="profile_desktop">桌面 Windows (Chrome 120)</string>
    <string name="profile_mobile">手机 Android (Pixel 7)</string>
    <string name="profile_tablet">平板 iPad (Safari 17)</string>
</resources>
