<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/grp_main">
        <item android:id="@+id/nav_new_tab"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_new_tab" />
        <item android:id="@+id/nav_bookmarks"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_bookmarks" />
        <item android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_history" />
    </group>
    <group android:id="@+id/grp_tools">
        <item android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
        <item android:id="@+id/nav_clean"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/menu_clean" />
        <item android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>
</menu>
